[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/object/base/base.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 152, 152 )

[sub_resource type="CircleShape2D" id=2]
radius = 136.0

[node name="Area2D" type="Area2D" groups=[
"object",
]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 10, 10 )

[node name="hp" type="RichTextLabel" parent="."]
margin_left = -24.0
margin_top = -208.0
margin_right = 144.0
margin_bottom = -192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold" type="RichTextLabel" parent="."]
margin_left = -24.0
margin_top = -192.0
margin_right = 120.0
margin_bottom = -176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number_of_miners" type="RichTextLabel" parent="."]
margin_left = -24.0
margin_top = -176.0
margin_right = 360.0
margin_bottom = -160.0
text = "Number of miners: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
